--- a/test_pkg/package.xml
+++ b/test_pkg/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>aug2per</name>
+  <name>test_pkg</name>
   <version>0.0.0</version>
-  <description>The aug2per package</description>
+  <description>The test_pkg package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="tanishqjain@todo.todo">tanishqjain</maintainer>
+  <maintainer email="tanishq@todo.todo">tanishq</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/aug2per</url> -->
+  <!-- <url type="website">http://wiki.ros.org/test_pkg</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
@@ -56,6 +56,7 @@
   <build_export_depend>std_msgs</build_export_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+
 
 
   <!-- The export tag contains other, unspecified, tags -->
