--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "ros_decawave"]
 	path = ros_decawave
 	url = https://github.com/verlab/ros_decawave
+[submodule "rosserial"]
+	path = rosserial
+	url = https://github.com/ros-drivers/rosserial
